# scriba

./: .env.template  .gitignore  CLAUDE_DESKTOP_INTEGRATION.md  Cargo.toml  README.md  RELEASE_NOTES.md  schema.sql
.github/workflows/: release.yml  update-formula.yml
Formula/: scriba.rb
docs/: agent-architecture.md
src/: audio.rs  config.rs  core.rs  dashboard.rs  database.rs  errors.rs  lib.rs  library.rs  main.rs  mcp.rs  record.rs  transcribe.rs  tui.rs  utils.rs
src/agent/: loop_runner.rs  mod.rs  tools.rs
src/agent/providers/: anthropic.rs  google.rs  mod.rs  ollama.rs  openai.rs
src/core/: audio.rs  config.rs  diarization.rs  files.rs  mod.rs  recording.rs  ring_buffer.rs  transcription.rs  types.rs  voice.rs  workflow.rs
src/database/: mod.rs  models.rs  repository.rs
src/enrichment/: anthropic.rs  chat_prompts.rs  context.rs  extractor.rs  google.rs  mod.rs  ollama.rs  openai.rs  prompts.rs  provider.rs  search.rs  world.rs
src/entities/: linker.rs  mod.rs  registry.rs
src/mcp/: mod.rs
src/tools/: definitions.rs  executor.rs  mod.rs
src/tui/: app.rs  chat.rs  mod.rs
