[package]
name = "scriba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
structopt = "0.3"
reqwest = { version = "0.11", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
cpal = "0.15.2"
hound = "3.5"
anyhow = "1.0"
dirs = "5.0.1"
lazy_static = "1.4.0"