[package]
name = "scriba"
version = "0.7.1"
edition = "2021"
description = "A simple CLI tool for recording and transcribing audio using OpenAI's Whisper API"
authors = ["Giovanni Alberto Falcione"]
license = "MIT"
repository = "https://github.com/giovannialberto/scriba"
keywords = ["audio", "transcription", "cli", "whisper", "openai"]
categories = ["command-line-utilities", "multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
structopt = "0.3"
reqwest = { version = "0.11", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
cpal = "0.15.2"
hound = "3.5"
anyhow = "1.0"
dirs = "5.0.1"
lazy_static = "1.4.0"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
unicode-width = "0.1"
rusqlite = { version = "0.29", features = ["bundled", "chrono", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
crossterm = "0.27"
ratatui = "0.26"
arboard = "3.3"
