[package]
name = "scriba"
version = "0.11.0"
edition = "2021"
description = "A CLI tool for recording and transcribing audio locally using Whisper (whisper-rs)"
authors = ["Giovanni Alberto Falcione"]
license = "MIT"
repository = "https://github.com/giovannialberto/scriba"
keywords = ["audio", "transcription", "cli", "whisper", "openai"]
categories = ["command-line-utilities", "multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
structopt = "0.3"
reqwest = { version = "0.11", features = ["multipart", "stream", "json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
cpal = "0.15.2"
hound = "3.5"
anyhow = "1.0"
dirs = "5.0.1"
lazy_static = "1.4.0"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
unicode-width = "0.1"
rusqlite = { version = "0.29", features = ["bundled", "chrono", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
crossterm = "0.27"
ratatui = "0.26"
arboard = "3.3"
whisper-rs = "0.15"
num_cpus = "1.16"
futures-util = "0.3"
glob = "0.3"
thiserror = "1.0"
